[project]
name = "librosax"
dynamic = ["version", "dependencies", "optional-dependencies"]
authors = [
  { name="David Braun", email="braun@ccrma.stanford.edu" },
]
description = "A JAX implementation of audio processing functions"
readme = "README.md"
license = {text = "ISC"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
]

keywords = [
    "audio",
    "machine learning",
    "jax",
]

[project.urls]
Homepage = "https://github.com/DBraun/librosax"
Issues = "https://github.com/DBraun/librosax/issues"

[tool.setuptools.dynamic]
version = {attr = "librosax.version.version"}
